# hp-game

./: .dockerignore  .env.production.example  .gitignore  .status_patch.txt  CASE_BRIEFING_FINDINGS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_RESEARCH-investigation_layout.md  CODEBASE_RESEARCH.md  Caddyfile  DEBUG_SPELL_SUCCESS.md  Dockerfile.backend  Dockerfile.frontend  EVENING_CHANGES.md  FIXED_BOTH_ISSUES.md  GAME_DESIGN.md  GAME_DESIGN_ANALYSIS.md  GITHUB_RESEARCH.md  INITIAL.md  LEGILIMENCY-ISSUES-SUMMARY.md  LLM_CONFIGURATION_FIX.md  PHASE_2.5_ANALYSIS.md  PLANNING.md  README.md  RESEARCH.md  SESSION_SUMMARY_2026-01-15.md  STATUS.md  STATUS.md.backup  TEST-FAILURES.md  TESTING-CONVENTIONS.md  TOM_PROMPT_OPTIMIZATION.md  TRUST_SYSTEM_IMPLEMENTATION.md  VALIDATION-COMPLETE-MULTI-LLM.txt  VALIDATION-GATES-ZOD-REPORT.md  VALIDATION-REPORT-MULTI-LLM-PHASE1.md  VERDICT_DEBUG_GUIDE.md  VERDICT_FIX_SUMMARY.md  WITNESS-NARRATOR-RESEARCH-SUMMARY.md  WITNESS-NARRATOR-VISUAL-REFERENCE.md  WITNESS_MODAL_DUPLICATE_TITLE_ANALYSIS.md  (+11 more)
backend/: .env.example  .gitignore  CLAUDE.md  README.md  case_002_state_dump.json  check_case_002_state.py  pyproject.toml  reset_case_002.py  test_llm_final.py  test_llm_integration.py  test_llm_quick.py  test_moody_feedback.py  test_verdict_endpoint.py  test_verdict_request.py  test_verdict_response.py
backend/data/: rationality-thinking-guide-condensed.md
backend/saves/: case_001_debug_test_1767902094.json  case_001_default.json  case_001_default_autosave.json  case_001_default_slot_1.json  case_001_default_slot_2.json  case_001_test_tier_1.json  (+12 more)
(+392 files in other folders)
